example/nginx/health_Check.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-healthcheck
  namespace: ingress-nginx
  labels:
    {
      app.kubernetes.io/name: ingress-nginx,
      app.kubernetes.io/part-of: ingress-nginx,
    }
spec:
  type: NodePort
  selector:
    app: nginx-ingress
    component: controller
  ports:
    - name: healthcheck
      port: 10254
      targetPort: healthz
      nodePort: 30200
  externalTrafficPolicy: 'Local'
