example/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-echo-server
spec:
  rules:
    - host: kuberkuber-cluster-bace65abd86cb82e.elb.ap-northeast-2.amazonaws.com
      http:
        paths:
          - path: /
            backend:
              serviceName: service-echo-server
              servicePort: 9000
